cmake_minimum_required(VERSION 3.12)
project(crawl)
enable_testing()
add_subdirectory(googletest)
include_directories(googletest/include)
add_executable(testMainThread test/testMainThread.cpp)
target_link_libraries(testMainThread PRIVATE gtest)
include(GoogleTest)
gtest_discover_tests(testMainThread)